-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.6.0 Alpha
-
Ubuntu 13.04
-
efd8e6922c59f6f9240b01e4e620fb464d11fc78 (qtbase/5.6, 19.11.2015. 5.6)
Calling clear() on QSqlQueryModel does not cause modelReset() signal to be fired. If used as a model in QTableView, the view still retains all rows and columns but without any data.
For Gerrit Dashboard: QTBUG-49404 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
140787,1 | Make sure we emit modelReset from QSqlQueryModel::clear() | 5.6 | qt/qtbase | Status: ABANDONED | -2 | 0 |
140946,4 | QSqlQueryModel::clear(): Call begin/endResetModel(). | 5.6 | qt/qtbase | Status: MERGED | +2 | 0 |